# Snotra

./: .releaserc  Cargo.toml  Makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  release.yaml
src/: ai_agent.rs  discord.rs  lib.rs  main.rs  tracing.rs
