[package]
name = "snotra"
version = "0.1.0"
edition = "2024"

[dependencies]
# Rust++
chatgpt_rs = "1.2"
lazy_static = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockall = "0.13.1"
async-trait = "0.1.88"

# Tracing & Logging
tracing = "0.1"
tracing-loki = { version = "0.2", default-features = false, features = ["rustls", "compat-0-2-1"] }
tracing-subscriber = "0.3"
test-log = "0.2.16"

# Discord
serenity = "0.12"

# HTTP
reqwest = { version = "=0.12.5", features = ["json", "rustls-tls"], default-features = false }
